<resources>
    <string name="app_name">Superhero</string>
    <string name="list">SEARCH</string>
    <string name="favourites">FAVOURITES</string>
    <string name="battle">BATTLE</string>
    <string name="list_fragment_label">Superhero list</string>
    <string name="profile_label">Superhero profile</string>
    <string name="favourites_label">Favourite heroes</string>
    <string name="battle_label">Battle</string>
    <string name="errorMsg">Error: %1%s</string>
    <string name="heroes">Heroes</string>
    <string name="searchbar_hint_label">Type here to search…</string>
    <string name="empty_view_text">The World is in danger and no superhero to save it…</string>
    <string name="empty_view_error_text">There is no hero with this name. Try to search another hero.</string>
    <string name="powerstats_button_label">Powerstats</string>
    <string name="comments_button_label">Comments</string>
    <string name="characteristics_button_label">Characteristics</string>
    <string name="biography_label">Biography</string>
    <string name="full_name_label">Full name:</string>
    <string name="alter_egos_label">Alter egos:</string>
    <string name="aliases_label">Aliases:</string>
    <string name="pob_label">Place of birth:</string>
    <string name="first_appearance_label">First appearance:</string>
    <string name="publisher_label">Publisher:</string>
    <string name="alignment_label">Alignment:</string>
    <string name="appearance_label">Appearance</string>
    <string name="gender_label">Gender:</string>
    <string name="race_label">Race:</string>
    <string name="height_label">Height:</string>
    <string name="weight_label">Weight:</string>
    <string name="eye_color_label">Eye color:</string>
    <string name="hair_color_label">Hair color:</string>
    <string name="work_label">Work</string>
    <string name="occupation_label">Occupation:</string>
    <string name="base_label">Base:</string>
    <string name="connections_label">Connections</string>
    <string name="group_affiliation_label">Group affiliation:</string>
    <string name="relatives_label">Relatives:</string>
    <string name="comment_hint">Type your comment…</string>
    <string name="save_comment_button_label">save comment</string>
    <string name="Intelligence">Intelligence</string>
    <string name="Strength">Strength</string>
    <string name="Speed">Speed</string>
    <string name="Durability">Durability</string>
    <string name="Power">Power</string>
    <string name="Combat">Combat</string>
    <string name="favourite_heroes_label">My favourite heroes</string>
    <string name="favourites_empty_view">You don\'t have favorite superheroes yet</string>
    <string name="overall_stat">Overall stat</string>
    <string name="start_label">start</string>
    <string name="empty_view_battle_screen">You must have atleast two favourite superhero</string>
    <string name="hp_text" translatable="false">%1$s%%</string>
    <string name="winner_label">winner</string>
    <string name="loser_label">loser</string>
    <string name="restart_label">restart</string>
    <plurals name="character_limit_label">
        <item quantity="one">%1$d character left</item>
        <item quantity="other">%1$d characters left</item>
    </plurals>
</resources>