<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.github.mikephil.charting.charts.RadarChart
        android:id="@+id/radarChart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        app:layout_constraintTop_toBottomOf="@+id/durabilityLabel"
        android:layout_marginTop="@dimen/design_16dp" />

    <TextView
        android:layout_marginTop="@dimen/design_8dp"
        android:id="@+id/intelligenceLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Intelligence"
        android:textAppearance="@style/chart_label_font"
        app:layout_constraintEnd_toEndOf="@+id/intelligenceChart"
        app:layout_constraintStart_toStartOf="@id/intelligenceChart"
        app:layout_constraintTop_toBottomOf="@id/intelligenceChart" />

    <TextView
        android:layout_marginTop="@dimen/design_8dp"
        android:id="@+id/strenghtLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Strength"
        android:textAppearance="@style/chart_label_font"
        app:layout_constraintEnd_toEndOf="@+id/strengthChart"
        app:layout_constraintStart_toStartOf="@id/strengthChart"
        app:layout_constraintTop_toBottomOf="@id/strengthChart" />

    <TextView
        android:layout_marginTop="@dimen/design_8dp"
        android:id="@+id/speedLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Speed"
        android:textAppearance="@style/chart_label_font"
        app:layout_constraintEnd_toEndOf="@+id/speedChart"
        app:layout_constraintStart_toStartOf="@id/speedChart"
        app:layout_constraintTop_toBottomOf="@id/speedChart" />

    <TextView
        android:layout_marginTop="@dimen/design_8dp"
        android:id="@+id/durabilityLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Durability"
        android:textAppearance="@style/chart_label_font"
        app:layout_constraintEnd_toEndOf="@+id/durabilityChart"
        app:layout_constraintStart_toStartOf="@id/durabilityChart"
        app:layout_constraintTop_toBottomOf="@id/durabilityChart" />

    <TextView
        android:layout_marginTop="@dimen/design_8dp"
        android:id="@+id/powerLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Power"
        android:textAppearance="@style/chart_label_font"
        app:layout_constraintEnd_toEndOf="@+id/powerChart"
        app:layout_constraintStart_toStartOf="@id/powerChart"
        app:layout_constraintTop_toBottomOf="@id/powerChart" />

    <TextView
        android:layout_marginTop="@dimen/design_8dp"
        android:id="@+id/combatLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Combat"
        android:textAppearance="@style/chart_label_font"
        app:layout_constraintEnd_toEndOf="@+id/combatChart"
        app:layout_constraintStart_toStartOf="@id/combatChart"
        app:layout_constraintTop_toBottomOf="@id/combatChart" />


    <com.ramijemli.percentagechartview.PercentageChartView
        android:id="@+id/intelligenceChart"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toStartOf="@+id/strengthChart"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pcv_animDuration="1500"
        app:pcv_animInterpolator="anticipate_overshoot"
        app:pcv_backgroundBarColor="@color/pcv_bg_bar_color"
        app:pcv_backgroundBarThickness="@dimen/design_8dp"
        app:pcv_drawBackgroundBar="true"
        app:pcv_mode="ring"
        app:pcv_orientation="clockwise"
        app:pcv_progressColor="@color/red"
        app:pcv_startAngle="90"
        app:pcv_textColor="@color/chart_text_color"
        app:pcv_textStyle="bold"
        app:pcv_textSize="@dimen/design_12sp" />

    <com.ramijemli.percentagechartview.PercentageChartView
        android:id="@+id/strengthChart"
        app:pcv_textSize="@dimen/design_12sp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toStartOf="@+id/speedChart"
        app:layout_constraintStart_toEndOf="@id/intelligenceChart"
        app:layout_constraintTop_toTopOf="@id/intelligenceChart"
        app:pcv_animDuration="1500"
        app:pcv_animInterpolator="anticipate_overshoot"
        app:pcv_backgroundBarColor="@color/pcv_bg_bar_color"
        app:pcv_backgroundBarThickness="@dimen/design_8dp"
        app:pcv_mode="ring"
        app:pcv_orientation="clockwise"
        app:pcv_progressColor="@color/salmon"
        app:pcv_startAngle="90"
        app:pcv_textColor="@color/chart_text_color"
        app:pcv_textStyle="bold" />

    <com.ramijemli.percentagechartview.PercentageChartView
        android:id="@+id/speedChart"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:pcv_textSize="@dimen/design_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/strengthChart"
        app:layout_constraintTop_toTopOf="@id/intelligenceChart"
        app:pcv_animDuration="1500"
        app:pcv_animInterpolator="anticipate_overshoot"
        app:pcv_backgroundBarColor="@color/pcv_bg_bar_color"
        app:pcv_backgroundBarThickness="@dimen/design_8dp"
        app:pcv_mode="ring"
        app:pcv_orientation="clockwise"
        app:pcv_progressColor="@color/green"
        app:pcv_startAngle="90"
        app:pcv_textColor="@color/chart_text_color"
        app:pcv_textStyle="bold" />

    <com.ramijemli.percentagechartview.PercentageChartView
        android:id="@+id/durabilityChart"
        android:layout_width="0dp"
        app:pcv_textSize="@dimen/design_12sp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/design_16dp"
        app:layout_constraintEnd_toStartOf="@+id/powerChart"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intelligenceLabel"
        app:pcv_animDuration="1500"
        app:pcv_animInterpolator="anticipate_overshoot"
        app:pcv_backgroundBarColor="@color/pcv_bg_bar_color"
        app:pcv_backgroundBarThickness="@dimen/design_8dp"
        app:pcv_mode="ring"
        app:pcv_orientation="clockwise"
        app:pcv_progressColor="@color/blue"
        app:pcv_startAngle="90"
        app:pcv_textColor="@color/chart_text_color"
        app:pcv_textStyle="bold" />

    <com.ramijemli.percentagechartview.PercentageChartView
        android:id="@+id/powerChart"
        app:pcv_textSize="@dimen/design_12sp"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toStartOf="@+id/combatChart"
        app:layout_constraintStart_toEndOf="@id/durabilityChart"
        app:layout_constraintTop_toTopOf="@id/durabilityChart"

        app:pcv_animDuration="1500"
        app:pcv_animInterpolator="anticipate_overshoot"
        app:pcv_backgroundBarColor="@color/pcv_bg_bar_color"
        app:pcv_backgroundBarThickness="@dimen/design_8dp"
        app:pcv_mode="ring"
        app:pcv_orientation="clockwise"
        app:pcv_progressColor="@color/brown"
        app:pcv_startAngle="90"
        app:pcv_textColor="@color/chart_text_color"
        app:pcv_textStyle="bold" />

    <com.ramijemli.percentagechartview.PercentageChartView
        android:id="@+id/combatChart"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:pcv_textSize="@dimen/design_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/powerChart"
        app:layout_constraintTop_toTopOf="@id/durabilityChart"
        app:pcv_animDuration="1500"
        app:pcv_animInterpolator="anticipate_overshoot"
        app:pcv_backgroundBarColor="@color/pcv_bg_bar_color"
        app:pcv_backgroundBarThickness="@dimen/design_8dp"
        app:pcv_mode="ring"
        app:pcv_orientation="clockwise"
        app:pcv_progressColor="@color/orange"
        app:pcv_startAngle="90"
        app:pcv_textColor="@color/chart_text_color"
        app:pcv_textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>