<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_bg_color"
    app:layoutDescription="@xml/fragment_superhero_details_scene">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/design_420dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_place"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/fade"
        android:layout_width="match_parent"
        android:layout_height="@dimen/design_190dp"
        android:background="@drawable/fade_shape"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/superheroNameText"
        style="@style/gothamBold38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Superhero" />

    <ImageView
        android:id="@+id/backButtonBackground"
        android:layout_width="@dimen/design_30dp"
        android:layout_height="@dimen/design_30dp"
        android:layout_marginStart="@dimen/design_16dp"
        android:layout_marginTop="@dimen/design_16dp"
        android:src="@drawable/ic_back_button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="@dimen/design_30dp"
        android:layout_height="@dimen/design_30dp"
        android:layout_marginStart="@dimen/design_16dp"
        android:layout_marginTop="@dimen/design_16dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backButtonCollapsed"
        android:layout_width="@dimen/design_30dp"
        android:layout_height="@dimen/design_30dp"
        android:layout_marginStart="@dimen/design_16dp"
        android:layout_marginTop="@dimen/design_16dp"
        android:src="@drawable/ic_back_button_collapsed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/tabButtonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/design_16dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingStart="@dimen/design_16dp"
        android:paddingEnd="@dimen/design_16dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage">

        <LinearLayout
            android:id="@+id/vv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/design_6dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/design_8dp">

            <app.superhero.src.views.ButtonView_
                android:id="@+id/powerstatsButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/design_8dp"
                app:label="@string/powerstats_button_label" />

            <app.superhero.src.views.ButtonView_
                android:id="@+id/characteristicsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/design_8dp"
                app:label="@string/characteristics_button_label" />

            <app.superhero.src.views.ButtonView_
                android:id="@+id/commentsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label="@string/comments_button_label" />

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/viewPagerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tabButtonsContainer">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/design_16dp" />

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>